--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,7 +106,8 @@
         "locale": "cpp",
         "__nullptr": "cpp",
         "__string": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "filesystem": "cpp"
     },
     "C_Cpp.dimInactiveRegions": false
 }
